# ft-cookbook

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/state-patterns/: index.html
notebooks/: index.ipynb  state_patterns.ipynb  template.ipynb
src/index/: main.py  styles.css
src/state-patterns/: main.py  styles.css
